--- a/index.html
+++ b/index.html
@@ -115,12 +115,6 @@
             background: #fff;
         }
 
-        .main-content p {
-            line-height: 1.6;
-            text-align: center;
-            max-width: 800px;
-        }
-
         /* Post Form Styles */
         #post-form {
             background-color: #000;
@@ -132,7 +126,8 @@
             margin-bottom: 20px;
             display: flex;
             flex-direction: column;
-            align-items: center;
+            align-items: flex-start;
+            position: relative;
         }
 
         #post-text {
@@ -140,17 +135,37 @@
             color: #fff;
             border: 2px solid #cc00cc;
             border-radius: 20px;
-            width: 90%;
-            padding: 10px;
+            width: 95%;
+            padding: 8px;
             font-family: Arial, sans-serif;
-            font-size: 16px;
+            font-size: 14px;
         }
 
         #post-form .button-row {
             display: flex;
-            justify-content: space-evenly;
+            justify-content: flex-start;
             width: 100%;
             margin-top: 10px;
+        }
+
+        #post-form .upload-box {
+            background-color: #cc00cc;
+            border: none;
+            border-radius: 20px;
+            color: #fff;
+            width: 150px;
+            height: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-right: 10px;
+            cursor: pointer;
+            font-size: 14px;
+            transition: background-color 0.3s ease;
+        }
+
+        #post-form .upload-box:hover {
+            background-color: #660066;
         }
 
         #post-form button {
@@ -162,6 +177,9 @@
             border-radius: 20px;
             cursor: pointer;
             transition: background-color 0.3s ease;
+            position: absolute;
+            right: 20px;
+            bottom: 20px;
         }
 
         #post-form button:hover {
@@ -218,65 +236,60 @@
             width: 90%;
         }
 
-        .post-actions {
-            display: flex;
-            justify-content: flex-start;
+        .post-attachment {
+            width: 90%;
+            text-align: center;
+            margin-top: 10px;
         }
 
-        .post-actions button {
-            background-color: #cc00cc;
-            border: none;
-            color: #fff;
-            padding: 10px 20px;
-            margin: 5px 0;
-            border-radius: 20px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
+        .post-attachment img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
         }
 
-        .post-actions button:hover {
-            background-color: #660066;
+        .post-attachment a {
+            color: #cc00cc;
+            text-decoration: none;
         }
 
-        .reply {
+        /* Reply Box Styles */
+        .reply-box {
             background-color: #000;
             border: 2px solid #cc00cc;
             border-radius: 20px;
-            padding: 20px;
-            width: 100%;
-            max-width: 800px;
+            padding: 10px;
+            width: 95%;
             margin-top: 10px;
             display: flex;
             flex-direction: column;
-            align-items: center;
         }
 
-        .reply textarea {
+        .reply-box textarea {
             background-color: #000;
             color: #fff;
             border: 2px solid #cc00cc;
-            border-radius: 20px;
-            width: 90%;
-            padding: 10px;
-            font-family: Arial, sans-serif;
-            resize: none;
+            border-radius: 10px;
+            padding: 8px;
+            font-size: 14px;
+            width: 100%;
         }
 
-        .reply button {
+        .reply-box button {
             background-color: #cc00cc;
             border: none;
             color: #fff;
-            padding: 10px 20px;
-            margin-top: 10px;
-            border-radius: 20px;
+            padding: 5px 10px;
+            border-radius: 10px;
+            margin-top: 5px;
+            align-self: flex-end;
             cursor: pointer;
             transition: background-color 0.3s ease;
         }
 
-        .reply button:hover {
+        .reply-box button:hover {
             background-color: #660066;
         }
-
     </style>
 </head>
 <body>
@@ -300,25 +313,31 @@
         </ul>
         <h2>Semester 3</h2>
         <ul>
-            <li><a href="?topic=software-ergonomie">Software-Ergonomie</a></li>
+            <li><a href="?topic=software-ergonomie">Software Ergonomie</a></li>
             <li><a href="?topic=empirische-methoden">Empirische Methoden</a></li>
             <li><a href="?topic=product-lifecycle-management">Produktlebenszyklus-Management</a></li>
-            <li><a href="?topic=softwareproduktentwicklung">Software-Produktentwicklung</a></li>
+            <li><a href="?topic=softwareproduktentwicklung">Software Produktentwicklung</a></li>
             <li><a href="?topic=moderation-und-fuehrung">Moderation und Führung</a></li>
         </ul>
     </div>
 
     <div class="main-content">
         <h1 id="topic-header">General</h1>
-        <p>Discuss the topic here. You can post comments, upload files, and engage with others.</p>
 
         <form id="post-form">
-            <textarea id="post-text" rows="4" placeholder="Write your post here..." required></textarea><br>
+            <textarea id="post-text" rows="4" placeholder="Write your post here..."></textarea><br>
             <div class="button-row">
-                <button type="button" id="upload-pic">📷 Upload Picture</button>
-                <button type="button" id="upload-file">📄 Upload File</button>
-                <button type="submit">Post</button>
+                <div class="upload-box" onclick="document.getElementById('upload-pic').click()">
+                    📷 Upload Picture
+                </div>
+                <input type="file" id="upload-pic" accept="image/*" style="display: none;">
+
+                <div class="upload-box" onclick="document.getElementById('upload-file').click()">
+                    📄 Upload File
+                </div>
+                <input type="file" id="upload-file" accept="application/pdf,.doc,.docx" style="display: none;">
             </div>
+            <button type="submit">Post</button>
         </form>
 
         <div id="posts-section">
@@ -329,8 +348,8 @@
     <script>
         const postForm = document.getElementById('post-form');
         const postsSection = document.getElementById('posts-section');
-        const uploadPicButton = document.getElementById('upload-pic');
-        const uploadFileButton = document.getElementById('upload-file');
+        const uploadPicInput = document.getElementById('upload-pic');
+        const uploadFileInput = document.getElementById('upload-file');
         const topicHeader = document.getElementById('topic-header');
 
         // Get topic from URL
@@ -338,92 +357,70 @@
         const topic = urlParams.get('topic') || "general";
         topicHeader.innerText = topic.replace(/-/g, ' ').replace(/\b\w/g, c => c.toUpperCase());
 
-        // Load posts for the current topic from local storage
-        const loadPosts = () => {
-            const posts = JSON.parse(localStorage.getItem(topic)) || [];
-            posts.forEach(post => {
-                createPostElement(post.text, post.date, post.replies);
-            });
-        };
-
-        // Save posts for the current topic to local storage
-        const savePosts = () => {
-            const posts = [];
-            document.querySelectorAll('.post').forEach(post => {
-                const text = post.querySelector('.post-body').textContent;
-                const date = post.querySelector('.post-date').textContent;
-                const replies = Array.from(post.querySelectorAll('.reply div')).map(reply => reply.textContent);
-                posts.push({ text, date, replies });
-            });
-            localStorage.setItem(topic, JSON.stringify(posts));
-        };
-
         // Create a post element
-        const createPostElement = (postText, postDate = new Date().toLocaleString(), replies = []) => {
+        const createPostElement = (postText, postDate = new Date().toLocaleString(), attachment = null) => {
             const postDiv = document.createElement('div');
             postDiv.className = 'post';
 
             const deleteButton = document.createElement('button');
             deleteButton.className = 'delete-button';
             deleteButton.textContent = '×';
-            deleteButton.onclick = () => {
-                postDiv.remove();
-                savePosts();
-            };
-            postDiv.appendChild(deleteButton);
+            deleteButton.onclick = () => postDiv.remove();
 
             const postBody = document.createElement('div');
             postBody.className = 'post-body';
             postBody.textContent = postText;
-            postDiv.appendChild(postBody);
 
             const postDateDiv = document.createElement('div');
             postDateDiv.className = 'post-date';
             postDateDiv.textContent = postDate;
+
+            postDiv.appendChild(deleteButton);
+            postDiv.appendChild(postBody);
             postDiv.appendChild(postDateDiv);
 
-            const actionsDiv = document.createElement('div');
-            actionsDiv.className = 'post-actions';
+            if (attachment) {
+                const attachmentDiv = document.createElement('div');
+                attachmentDiv.className = 'post-attachment';
+                if (attachment.type === 'image') {
+                    const img = document.createElement('img');
+                    img.src = attachment.url;
+                    attachmentDiv.appendChild(img);
+                } else {
+                    const link = document.createElement('a');
+                    link.href = attachment.url;
+                    link.textContent = 'View Attachment';
+                    link.target = '_blank';
+                    attachmentDiv.appendChild(link);
+                }
+                postDiv.appendChild(attachmentDiv);
+            }
+
+            const replyBox = document.createElement('div');
+            replyBox.className = 'reply-box';
+
+            const replyTextArea = document.createElement('textarea');
+            replyTextArea.placeholder = 'Write a reply...';
+            replyBox.appendChild(replyTextArea);
 
             const replyButton = document.createElement('button');
             replyButton.textContent = 'Reply';
             replyButton.onclick = () => {
-                const replyDiv = document.createElement('div');
-                replyDiv.className = 'reply';
-
-                const replyTextarea = document.createElement('textarea');
-                replyTextarea.rows = 2;
-                replyTextarea.placeholder = 'Write your reply here...';
-
-                const replySubmit = document.createElement('button');
-                replySubmit.textContent = 'Submit';
-                replySubmit.onclick = () => {
-                    const replyText = replyTextarea.value;
-                    const replyContent = document.createElement('div');
-                    replyContent.textContent = replyText;
-                    replyDiv.appendChild(replyContent);
-                    replyDiv.removeChild(replyTextarea);
-                    replyDiv.removeChild(replySubmit);
-                    savePosts();
-                };
-
-                replyDiv.appendChild(replyTextarea);
-                replyDiv.appendChild(replySubmit);
-                postDiv.appendChild(replyDiv);
+                const replyText = replyTextArea.value.trim();
+                if (replyText) {
+                    const replyDiv = document.createElement('div');
+                    replyDiv.textContent = replyText;
+                    replyDiv.style.marginTop = '10px';
+                    replyDiv.style.borderTop = '1px solid #cc00cc';
+                    replyDiv.style.paddingTop = '10px';
+                    replyDiv.style.color = '#fff';
+                    replyBox.appendChild(replyDiv);
+                    replyTextArea.value = '';
+                }
             };
+            replyBox.appendChild(replyButton);
 
-            actionsDiv.appendChild(replyButton);
-            postDiv.appendChild(actionsDiv);
-
-            replies.forEach(replyText => {
-                const replyDiv = document.createElement('div');
-                replyDiv.className = 'reply';
-                const replyContent = document.createElement('div');
-                replyContent.textContent = replyText;
-                replyDiv.appendChild(replyContent);
-                postDiv.appendChild(replyDiv);
-            });
-
+            postDiv.appendChild(replyBox);
             postsSection.appendChild(postDiv);
         };
 
@@ -431,24 +428,22 @@
             e.preventDefault();
 
             const postText = document.getElementById('post-text').value;
-            createPostElement(postText);
-            savePosts();
+            let attachment = null;
 
-            // Reset form
+            if (uploadPicInput.files.length > 0) {
+                const file = uploadPicInput.files[0];
+                attachment = { type: 'image', url: URL.createObjectURL(file) };
+            } else if (uploadFileInput.files.length > 0) {
+                const file = uploadFileInput.files[0];
+                attachment = { type: 'file', url: URL.createObjectURL(file) };
+            }
+
+            if (postText.trim() || attachment) {
+                createPostElement(postText, new Date().toLocaleString(), attachment);
+            }
+
             postForm.reset();
         });
-
-        // Handle picture and file uploads
-        uploadPicButton.addEventListener('click', () => {
-            alert('Picture upload functionality coming soon!');
-        });
-
-        uploadFileButton.addEventListener('click', () => {
-            alert('File upload functionality coming soon!');
-        });
-
-        // Load saved posts on page load
-        loadPosts();
     </script>
 </body>
 </html>
